--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,7 +27,8 @@ jobs:
       - run:
           name: Run tests with JUnit as reporter
           command: npx jest --ci --runInBand --reporters+default --reporters+jest-junit
-          environment: JEST_JUNIT_OUTPUT_DIR: "./junit/test-results.xml"
+          environment: 
+            JEST_JUNIT_OUTPUT_DIR: "./junit/test-results.xml"
           when: always
       - store_test_results:
           path: ./junit
